--- a/samples/CodeWithCompiledMarkup/StylesDemo.xaml
+++ b/samples/CodeWithCompiledMarkup/StylesDemo.xaml
@@ -6,11 +6,43 @@
         xmlns:local="clr-namespace:CodeWithCompiledMarkup"
         mc:Ignorable="d"
         Title="StylesDemo" Height="450" Width="800">
+    <Window.Resources>
+        <ResourceDictionary>
+            <Style x:Key="buttonStyle" TargetType="Button">
+                <Style.Setters>
+                    <Setter Property="Height" Value="30"></Setter>
+                    <Setter Property="Width" Value="100"></Setter>
+                    <Setter Property="FontSize" Value="12"></Setter>
+                    <Setter Property="Foreground" Value="Blue"></Setter>
+                </Style.Setters>
+            </Style>
+        </ResourceDictionary>
+    </Window.Resources>
     <StackPanel>
-        <Button  Content="Button1" Margin="10" x:Name="button1"></Button>
-        <Button  Content="Button2" Margin="10" x:Name="button2"></Button>
-        <Button  Content="Button3" Margin="10" x:Name="button3"></Button>
-        <Button  Content="Button4" Margin="10" x:Name="button4"></Button>
-        <Button  Content="Button5" Margin="10" x:Name="button5"></Button>
+        <Button  Content="Button1" Style="{StaticResource ResourceKey=buttonStyle}" Margin="10" x:Name="button1"></Button>
+        <Button  Content="Button2" Style="{StaticResource ResourceKey=buttonStyle}" Margin="10" x:Name="button2"></Button>
+        <Button  Content="Button3" Style="{StaticResource ResourceKey=buttonStyle}" Margin="10" x:Name="button3"></Button>
+        <Button  Content="Button4" Style="{StaticResource ResourceKey=buttonStyle}" Margin="10" x:Name="button4"></Button>
+        <Button  Content="Button5" Style="{StaticResource ResourceKey=buttonStyle}" Margin="10" x:Name="button5"></Button>
+        <StackPanel>
+            <StackPanel.Resources>
+                <ResourceDictionary>
+                    <Style x:Key="buttonStyle" TargetType="Button">
+                        <Style.Setters>
+                            <Setter Property="Height" Value="30"></Setter>
+                            <Setter Property="Width" Value="100"></Setter>
+                            <Setter Property="FontSize" Value="12"></Setter>
+                            <Setter Property="Foreground" Value="Red"></Setter>
+                        </Style.Setters>
+                    </Style>
+                </ResourceDictionary>
+            </StackPanel.Resources>
+            <Button  Content="Button6" Margin="10" x:Name="button6" Style="{StaticResource ResourceKey=buttonStyle}"></Button>
+            <Button  Content="Button7" Margin="10" x:Name="button7" Style="{StaticResource ResourceKey=buttonStyle}"></Button>
+            <Button  Content="Button8" Margin="10" x:Name="button8" Style="{StaticResource ResourceKey=buttonStyle}"></Button>
+            <Button  Content="Button9" Margin="10" x:Name="button9" Style="{StaticResource ResourceKey=buttonStyle}"></Button>
+            <Button  Content="Button10" Margin="10" x:Name="button10" Style="{StaticResource ResourceKey=buttonStyle}"></Button>
+        </StackPanel>
+              
     </StackPanel>
 </Window>
