--- a/samples/CodeWithCompiledMarkup/App.xaml
+++ b/samples/CodeWithCompiledMarkup/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CodeWithCompiledMarkup"
-             StartupUri="DataBindingDemo.xaml">
+             StartupUri="UserAdminDashboard.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
