--- a/samples/CodeWithCompiledMarkup/Resources/styles/ControlStyles.xaml
+++ b/samples/CodeWithCompiledMarkup/Resources/styles/ControlStyles.xaml
@@ -31,4 +31,23 @@
         </Style.Setters>
     </Style>
 
+    <Style x:Key="errorFeedbackStyle">
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="true">
+                <Trigger.Setters>
+                    <Setter Property="Validation.ErrorTemplate">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <AdornedElementPlaceholder x:Name="controlHolder"></AdornedElementPlaceholder>
+                                    <TextBlock FontSize="15" Foreground="Red">*</TextBlock>
+                                    <TextBlock Text="{Binding ElementName=controlHolder,Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"></TextBlock>
+                                </StackPanel>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger.Setters>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
