--- a/samples/MVVMDemo/App.xaml
+++ b/samples/MVVMDemo/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:MVVMDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/UserDataModelTemplates.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
